syntax = "proto3";

package users;

option go_package = "github.com/alenalato/users-service/pkg/grpc";

import "create_user.proto";
import "update_user.proto";
import "delete_user.proto";
import "list_users.proto";

service Users {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);

  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
}
